overflow fix

--- a/style.css
+++ b/style.css
@@ -51,15 +51,16 @@ body {
 
 .cart-panel {
     position: fixed;
-    left: -340px;
+    left: -392px;
     top: 0;
     bottom: 0;
-    width: 300px;
+    width: 350px;
     background-color: #f4f4f4;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: left 0.3s ease;
     z-index: 9999;
+    overflow-y: scroll;
 }
 
 .close-btn {
